--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "\u003ca href=\"https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb\" target=\"_parent\"\u003e\u003cimg src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/\u003e\u003c/a\u003e\n"
+        "<a href=\"https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
       ]
     },
     {
@@ -17,8 +17,26 @@
         "id": "-pVhOfzLx9us"
       },
       "source": [
-        "# Using Google Colab with GitHub\n",
+        "# Using Simvue in Google Colabs\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "import random\n",
+        "import time\n",
+        "from simvue import Run\n",
+        "\n",
+        "run = Run()"
       ]
     },
     {
@@ -29,7 +47,7 @@
       },
       "source": [
         "\n",
-        "[Google Colaboratory](http://colab.research.google.com) is designed to integrate cleanly with GitHub, allowing both loading notebooks from github and saving notebooks to github."
+        "# Initialisation"
       ]
     },
     {
@@ -39,15 +57,10 @@
         "id": "K-NVg7RjyeTk"
       },
       "source": [
-        "## Loading Public Notebooks Directly from GitHub\n",
-        "\n",
-        "Colab can load public github notebooks directly, with no required authorization step.\n",
-        "\n",
-        "For example, consider the notebook at this address: https://github.com/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb.\n",
-        "\n",
-        "The direct colab link to this notebook is: https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb.\n",
-        "\n",
-        "To generate such links in one click, you can use the [Open in Colab](https://chrome.google.com/webstore/detail/open-in-colab/iogfkhleblhcpcekbiedikdehleodpjo) Chrome extension."
+        "run.init(name='hello-world-%d' % time.time(),\n",
+        "            tags=['test'],\n",
+        "            metadata={'key1': 1, 'key2': 'hello'},\n",
+        "            folder='/tests')"
       ]
     },
     {
@@ -57,14 +70,21 @@
         "id": "WzIRIt9d2huC"
       },
       "source": [
-        "## Browsing GitHub Repositories from Colab\n",
+        "## Save this script"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
         "\n",
-        "Colab also supports special URLs that link directly to a GitHub browser for any user/organization, repository, or branch. For example:\n",
-        "\n",
-        "- http://colab.research.google.com/github will give you a general github browser, where you can search for any github organization or username.\n",
-        "- http://colab.research.google.com/github/googlecolab/ will open the repository browser for the ``googlecolab`` organization. Replace ``googlecolab`` with any other github org or user to see their repositories.\n",
-        "- http://colab.research.google.com/github/googlecolab/colabtools/ will let you browse the main branch of the ``colabtools`` repository within the ``googlecolab`` organization. Substitute any user/org and repository to see its contents.\n",
-        "- http://colab.research.google.com/github/googlecolab/colabtools/blob/main will let you browse ``main`` branch of the ``colabtools`` repository within the ``googlecolab`` organization. (don't forget the ``blob`` here!) You can specify any valid branch for any valid repository."
+        "run.save(os.path.basename(__file__), 'code')"
       ]
     },
     {
@@ -74,15 +94,23 @@
         "id": "Rmai0dD30XzL"
       },
       "source": [
-        "## Loading Private Notebooks\n",
+        "## Generate 10 random numbers, one per second"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
         "\n",
-        "Loading a notebook from a private GitHub repository is possible, but requires an additional step to allow Colab to access your files.\n",
-        "Do the following:\n",
-        "\n",
-        "1. Navigate to http://colab.research.google.com/github.\n",
-        "2. Click the \"Include Private Repos\" checkbox.\n",
-        "3. In the popup window, sign-in to your Github account and authorize Colab to read the private files.\n",
-        "4. Your private repositories and notebooks will now be available via the github navigation pane."
+        "for count in range(0, 10):\n",
+        "    run.log_metrics({'random_number': 10*random.random()})\n",
+        "    time.sleep(1)"
       ]
     },
     {
@@ -92,55 +120,21 @@
         "id": "8J3NBxtZpPcK"
       },
       "source": [
-        "## Saving Notebooks To GitHub or Drive\n",
-        "\n",
-        "Any time you open a GitHub hosted notebook in Colab, it opens a new editable view of the notebook. You can run and modify the notebook without worrying about overwriting the source.\n",
-        "\n",
-        "If you would like to save your changes from within Colab, you can use the File menu to save the modified notebook either to Google Drive or back to GitHub. Choose **File→Save a copy in Drive** or **File→Save a copy to GitHub** and follow the resulting prompts. To save a Colab notebook to GitHub requires giving Colab permission to push the commit to your repository."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "8QAWNjizy_3O"
-      },
-      "source": [
-        "## Open In Colab Badge\n",
-        "\n",
-        "Anybody can open a copy of any github-hosted notebook within Colab. To make it easier to give people access to live views of GitHub-hosted notebooks,\n",
-        "colab provides a [shields.io](http://shields.io/)-style badge, which appears as follows:\n",
-        "\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb)\n",
-        "\n",
-        "The markdown for the above badge is the following:\n",
-        "\n",
-        "```markdown\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb)\n",
-        "```\n",
-        "\n",
-        "The HTML equivalent is:\n",
-        "\n",
-        "```HTML\n",
-        "\u003ca href=\"https://colab.research.google.com/github/googlecolab/colabtools/blob/main/notebooks/colab-github-demo.ipynb\"\u003e\n",
-        "  \u003cimg src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/\u003e\n",
-        "\u003c/a\u003e\n",
-        "```\n",
-        "\n",
-        "Remember to replace the notebook URL in this template with the notebook you want to link to."
+        "## Close the run"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 0,
+      "execution_count": null,
       "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "3VQqVi-3ScBC"
+        "vscode": {
+          "languageId": "python"
+        }
       },
       "outputs": [],
       "source": [
-        ""
+        "\n",
+        "run.close()"
       ]
     }
   ],
