Updated example script adding environment variables needed to run application

--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -22,13 +22,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Example taken from https://github.com/googlecolab/colabtools.git"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Install any dependencies if you have not already done so e.g. simvue, google.colab"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#pip install simvue"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#pip install google.colab"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
@@ -47,15 +75,45 @@
       },
       "source": [
         "\n",
-        "# Initialisation"
+        "### Initialisation"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "K-NVg7RjyeTk"
-      },
+      "metadata": {},
+      "source": [
+        "To proceed you need to specify the URL of the Simvue server and provide an access token used to authenticate to the server.\n",
+        "\n",
+        "Login to https://simvue.io, go to the Runs page and click Create new run. \n",
+        "\n",
+        "Set the environment variables using the values from the Create new run page as follows"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os\n",
+        "os.environ['SIMVUE_URL'] = 'https://app.simvue.io'\n",
+        "print(os.getenv('SIMVUE_URL'))\n",
+        "#os.environ['SIMVUE_TOKEN'] = ''\n",
+        "print(os.getenv('SIMVUE_TOKEN'))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Define the name of the run, metadata (key-value pairs) and tags (list of short labels). Metadata values are integers, floating point numbers or strings, and would typically be input or output parameters associated with a run. Runs can be filtered using both metadata and tags."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "run.init(name='hello-world-%d' % time.time(),\n",
         "            tags=['test'],\n",
@@ -67,44 +125,16 @@
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
-        "id": "WzIRIt9d2huC"
-      },
-      "source": [
-        "## Save this script"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
-      "outputs": [],
-      "source": [
-        "\n",
-        "run.save(os.path.basename(__file__), 'code')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
         "id": "Rmai0dD30XzL"
       },
       "source": [
-        "## Generate 10 random numbers, one per second"
+        "### Generate 10 random numbers, one per second"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "\n",
@@ -120,21 +150,24 @@
         "id": "8J3NBxtZpPcK"
       },
       "source": [
-        "## Close the run"
+        "### Close the run"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "\n",
         "run.close()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### To view the results login to simvue.io"
       ]
     }
   ],
@@ -146,8 +179,18 @@
       "version": "0.3.2"
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.8 ('base')",
+      "language": "python",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.8"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "cfd12c460843f72ac31856d2a5b94956cfc657ba97314f23f6b0471b6cc99e27"
+      }
     }
   },
   "nbformat": 4,
