Updated method to store tokens so not saved in the notebook

--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -98,8 +98,11 @@
         "import os\n",
         "os.environ['SIMVUE_URL'] = 'https://app.simvue.io'\n",
         "print(os.getenv('SIMVUE_URL'))\n",
-        "#os.environ['SIMVUE_TOKEN'] = ''\n",
-        "print(os.getenv('SIMVUE_TOKEN'))"
+        "\n",
+        "# To avoid tokens being stored in the notebook \n",
+        "# If working with multiple notebooks create a simvue.ini file in Google Drive and access that. \n",
+        "import getpass\n",
+        "os.environ['SIMVUE_TOKEN'] = getpass.getpass(prompt='Token: ')"
       ]
     },
     {
