--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -17,15 +17,8 @@
         "id": "-pVhOfzLx9us"
       },
       "source": [
-        "# Using Simvue in Google Colabs\n",
+        "# Using Simvue in Google Colab\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "### Example taken from https://github.com/googlecolab/colabtools.git"
       ]
     },
     {
@@ -41,16 +34,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "#pip install simvue"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#pip install google.colab"
+        "!pip install simvue"
       ]
     },
     {
@@ -84,9 +68,9 @@
       "source": [
         "To proceed you need to specify the URL of the Simvue server and provide an access token used to authenticate to the server.\n",
         "\n",
-        "Login to https://simvue.io, go to the Runs page and click Create new run. \n",
+        "Login to https://app.simvue.io, go to the Runs page and click Create new run. \n",
         "\n",
-        "Set the environment variables using the values from the Create new run page as follows"
+        "Set the environment variables using the values from the **Create new run** modal as follows"
       ]
     },
     {
@@ -170,7 +154,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### To view the results login to simvue.io"
+        "### To view the results login to https://app.simvue.io"
       ]
     }
   ],
