--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -25,7 +25,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Install any dependencies if you have not already done so e.g. simvue, google.colab"
+        "Install any dependencies if you have not already done so e.g. simvue"
       ]
     },
     {
