--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -68,7 +68,7 @@
       "source": [
         "To proceed you need to specify the URL of the Simvue server and provide an access token used to authenticate to the server.\n",
         "\n",
-        "Login to https://app.simvue.io, go to the Runs page and click Create new run. \n",
+        "Login to https://app.simvue.io, go to the **Runs** page and click **Create new run**. \n",
         "\n",
         "Set the environment variables using the values from the **Create new run** modal as follows"
       ]
