--- a/notebooks/simvue_colab_example.ipynb
+++ b/notebooks/simvue_colab_example.ipynb
@@ -83,8 +83,7 @@
         "os.environ['SIMVUE_URL'] = 'https://app.simvue.io'\n",
         "print(os.getenv('SIMVUE_URL'))\n",
         "\n",
-        "# To avoid tokens being stored in the notebook \n",
-        "# If working with multiple notebooks create a simvue.ini file in Google Drive and access that. \n",
+        "# The following avoids tokens being stored in the notebook \n",
         "import getpass\n",
         "os.environ['SIMVUE_TOKEN'] = getpass.getpass(prompt='Token: ')"
       ]
