--- a/notebooks/simvue_tensorflow_example.ipynb
+++ b/notebooks/simvue_tensorflow_example.ipynb
@@ -14,6 +14,16 @@
     }
   },
   "cells": [
+     {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/drive/1HDN0gUKC9pGtroOQhylrH_eM6BnIvcRC?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
