Remove outputs from notebooks, change GeometryOptimisation name to Bluemeira

--- a/notebooks/detailed_example.ipynb
+++ b/notebooks/detailed_example.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://colab.research.google.com/drive/1GHItQvWS9HBUoTmdZxDYnGq0wfmdYhsc?usp=sharing\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<p align=\"center\">\n",
     "  <picture>\n",
     "    <source media=\"(prefers-color-scheme: dark)\" srcset=\"https://raw.githubusercontent.com/simvue-io/.github/refs/heads/main/simvue-white.png\" />\n",
@@ -30,85 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: simvue in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (2.0.0a1)\n",
-      "Collecting simpy\n",
-      "  Downloading simpy-4.1.1-py3-none-any.whl (27 kB)\n",
-      "Requirement already satisfied: pandas<3.0.0,>=2.2.3 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.2.3)\n",
-      "Requirement already satisfied: codecarbon<3.0.0,>=2.8.3 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.8.3)\n",
-      "Requirement already satisfied: humanfriendly<11.0,>=10.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (10.0)\n",
-      "Requirement already satisfied: numpy<3.0.0,>=2.0.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.2.3)\n",
-      "Requirement already satisfied: deepmerge<3.0,>=2.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.0)\n",
-      "Requirement already satisfied: gitpython<4.0.0,>=3.1.44 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (3.1.44)\n",
-      "Requirement already satisfied: tabulate<0.10.0,>=0.9.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (0.9.0)\n",
-      "Requirement already satisfied: pyjwt<3.0.0,>=2.10.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.10.1)\n",
-      "Requirement already satisfied: psutil<7.0.0,>=6.1.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (6.1.1)\n",
-      "Requirement already satisfied: typing-extensions<5.0.0,>=4.12.2 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (4.12.2)\n",
-      "Requirement already satisfied: flatdict<5.0.0,>=4.0.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (4.0.1)\n",
-      "Requirement already satisfied: randomname<0.3.0,>=0.2.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (0.2.1)\n",
-      "Requirement already satisfied: toml<0.11.0,>=0.10.2 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (0.10.2)\n",
-      "Requirement already satisfied: click<9.0.0,>=8.1.8 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (8.1.8)\n",
-      "Requirement already satisfied: semver<4.0.0,>=3.0.4 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (3.0.4)\n",
-      "Requirement already satisfied: pydantic<3.0.0,>=2.10.6 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.10.6)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.32.3 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.32.3)\n",
-      "Requirement already satisfied: msgpack<2.0.0,>=1.1.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (1.1.0)\n",
-      "Requirement already satisfied: tenacity<10.0.0,>=9.0.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (9.0.0)\n",
-      "Requirement already satisfied: email-validator<3.0.0,>=2.2.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from simvue) (2.2.0)\n",
-      "Requirement already satisfied: fief-client[cli] in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (0.20.0)\n",
-      "Requirement already satisfied: arrow in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (1.3.0)\n",
-      "Requirement already satisfied: prometheus-client in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (0.21.1)\n",
-      "Requirement already satisfied: py-cpuinfo in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (9.0.0)\n",
-      "Requirement already satisfied: pynvml in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (12.0.0)\n",
-      "Requirement already satisfied: typer in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (0.15.1)\n",
-      "Requirement already satisfied: rich in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (13.7.1)\n",
-      "Requirement already satisfied: questionary in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (2.1.0)\n",
-      "Requirement already satisfied: rapidfuzz in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from codecarbon<3.0.0,>=2.8.3->simvue) (3.9.6)\n",
-      "Requirement already satisfied: dnspython>=2.0.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from email-validator<3.0.0,>=2.2.0->simvue) (2.7.0)\n",
-      "Requirement already satisfied: idna>=2.0.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from email-validator<3.0.0,>=2.2.0->simvue) (3.7)\n",
-      "Requirement already satisfied: gitdb<5,>=4.0.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from gitpython<4.0.0,>=3.1.44->simvue) (4.0.12)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from pandas<3.0.0,>=2.2.3->simvue) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from pandas<3.0.0,>=2.2.3->simvue) (2025.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from pandas<3.0.0,>=2.2.3->simvue) (2025.1)\n",
-      "Requirement already satisfied: pydantic-core==2.27.2 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from pydantic<3.0.0,>=2.10.6->simvue) (2.27.2)\n",
-      "Requirement already satisfied: annotated-types>=0.6.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from pydantic<3.0.0,>=2.10.6->simvue) (0.7.0)\n",
-      "Requirement already satisfied: fire in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from randomname<0.3.0,>=0.2.1->simvue) (0.7.0)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from requests<3.0.0,>=2.32.3->simvue) (2.2.2)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from requests<3.0.0,>=2.32.3->simvue) (3.3.2)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from requests<3.0.0,>=2.32.3->simvue) (2024.7.4)\n",
-      "Requirement already satisfied: smmap<6,>=3.0.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from gitdb<5,>=4.0.1->gitpython<4.0.0,>=3.1.44->simvue) (5.0.2)\n",
-      "Requirement already satisfied: six>=1.5 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from python-dateutil>=2.8.2->pandas<3.0.0,>=2.2.3->simvue) (1.16.0)\n",
-      "Requirement already satisfied: types-python-dateutil>=2.8.10 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from arrow->codecarbon<3.0.0,>=2.8.3->simvue) (2.9.0.20241206)\n",
-      "Requirement already satisfied: httpx<0.28.0,>=0.21.3 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (0.27.2)\n",
-      "Requirement already satisfied: jwcrypto<2.0.0,>=1.4 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (1.5.6)\n",
-      "Requirement already satisfied: yaspin in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (3.1.0)\n",
-      "Requirement already satisfied: termcolor in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from fire->randomname<0.3.0,>=0.2.1->simvue) (2.3.0)\n",
-      "Requirement already satisfied: nvidia-ml-py<13.0.0a0,>=12.0.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from pynvml->codecarbon<3.0.0,>=2.8.3->simvue) (12.570.86)\n",
-      "Requirement already satisfied: prompt_toolkit<4.0,>=2.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from questionary->codecarbon<3.0.0,>=2.8.3->simvue) (3.0.50)\n",
-      "Requirement already satisfied: markdown-it-py>=2.2.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from rich->codecarbon<3.0.0,>=2.8.3->simvue) (3.0.0)\n",
-      "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from rich->codecarbon<3.0.0,>=2.8.3->simvue) (2.18.0)\n",
-      "Requirement already satisfied: shellingham>=1.3.0 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from typer->codecarbon<3.0.0,>=2.8.3->simvue) (1.5.4)\n",
-      "Requirement already satisfied: httpcore==1.* in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from httpx<0.28.0,>=0.21.3->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (1.0.7)\n",
-      "Requirement already satisfied: anyio in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from httpx<0.28.0,>=0.21.3->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (4.8.0)\n",
-      "Requirement already satisfied: sniffio in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from httpx<0.28.0,>=0.21.3->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (1.3.1)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from httpcore==1.*->httpx<0.28.0,>=0.21.3->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (0.14.0)\n",
-      "Requirement already satisfied: cryptography>=3.4 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from jwcrypto<2.0.0,>=1.4->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (43.0.0)\n",
-      "Requirement already satisfied: mdurl~=0.1 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from markdown-it-py>=2.2.0->rich->codecarbon<3.0.0,>=2.8.3->simvue) (0.1.2)\n",
-      "Requirement already satisfied: wcwidth in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from prompt_toolkit<4.0,>=2.0->questionary->codecarbon<3.0.0,>=2.8.3->simvue) (0.2.13)\n",
-      "Requirement already satisfied: cffi>=1.12 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from cryptography>=3.4->jwcrypto<2.0.0,>=1.4->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (1.17.0)\n",
-      "Requirement already satisfied: exceptiongroup>=1.0.2 in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from anyio->httpx<0.28.0,>=0.21.3->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (1.2.2)\n",
-      "Requirement already satisfied: pycparser in /home/wk9874/.pyenv/versions/3.10.14/lib/python3.10/site-packages (from cffi>=1.12->cryptography>=3.4->jwcrypto<2.0.0,>=1.4->fief-client[cli]->codecarbon<3.0.0,>=2.8.3->simvue) (2.22)\n",
-      "Installing collected packages: simpy\n",
-      "Successfully installed simpy-4.1.1\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install simvue simpy numpy"
    ]
@@ -126,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,20 +194,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m[simvue] Run bank-customers-example-1740158722 created\u001b[0m\n",
-      "\u001b[32m\u001b[1m[simvue] Monitor in the UI at https://nightly.simvue.io/dashboard/runs/run/4YqZawDmUCTYYvXAzE6QQ5\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setup the simulation (will run it in real time)\n",
     "random.seed(RANDOM_SEED)\n",
-    "env = simpy.rt.RealtimeEnvironment(factor=1.0, strict=False)\n",
+    "env = simpy.rt.RealtimeEnvironment(factor=1, strict=False)\n",
     "\n",
     "# Initialize statisticss as part of the env object\n",
     "env.total_customers = 0\n",
@@ -354,13 +274,13 @@
     "* The events log shows each customer arriving, waiting, and either being served or reneging\n",
     "* There are two alerts:\n",
     "    - One based on the events log, which should fire near the start of the run when the first customer gives up without being served\n",
-    "    - One based on the `percentage_reneged` metric, which fires near the end of the simulation when the percentage of customers who reneged reached 40%. This one should also send you an email\n",
-    "* The run's status is set to Failed as the final percentage of customers giving up exceeds 50%\n",
+    "    - One based on the `percentage_reneged` metric, which fires near the end of the simulation when the percentage of customers who reneged (time averaged over the last minute) reached 40%. This one should also send you an email\n",
+    "* The run's status is set to 'failed' if the final percentage of customers giving up exceeds 50%, otherwise it is 'completed'\n",
     "* You received an email when the run finished, telling you that it failed\n",
     "\n",
     "Try tweaking the input parameters, and see what effect it has! Compare different runs easily using the Simvue web UI, with the ability to filter based on things like run status, tags, and metadata to identify the runs you care about. and creating custom plots to visualise your results.\n",
     "\n",
-    "(If you want to make the simulation run more quickly to experiment, reduce the `factor` parameter)"
+    "(**Note**: If you want to make the simulation run more quickly, reduce the `factor` parameter in the initialization of your `env` (at the top of the previous cell)"
    ]
   }
  ],
