Change app to uk.simvue.io

--- a/notebooks/detailed_example.ipynb
+++ b/notebooks/detailed_example.ipynb
@@ -50,7 +50,7 @@
     "### Initialisation\n",
     "To proceed you need to specify the URL of the Simvue server and provide an access token used to authenticate to the server. This can be done by either creating a `simvue.toml` file containing the required details, or specifying them as environment variables.\n",
     "\n",
-    "Login to https://app.simvue.io, go to the **Runs** page and click **Create new run**. Copy the 'token' from here. The run the cell below, paste the token into the box when prompted and push enter."
+    "Login to https://uk.simvue.io, go to the **Runs** page and click **Create new run**. Copy the 'token' from here. The run the cell below, paste the token into the box when prompted and push enter."
    ]
   },
   {
@@ -62,7 +62,7 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "os.environ[\"SIMVUE_URL\"] = \"https://nightly.simvue.io\"\n",
+    "os.environ[\"SIMVUE_URL\"] = \"https://uk.simvue.io\"\n",
     "os.environ[\"SIMVUE_TOKEN\"] = getpass.getpass(prompt=\"Token: \")"
    ]
   },
