--- a/notebooks/non_python_example.ipynb
+++ b/notebooks/non_python_example.ipynb
@@ -53,7 +53,7 @@
     "### Initialisation\n",
     "To proceed you need to specify the URL of the Simvue server and provide an access token used to authenticate to the server. This can be done by either creating a `simvue.toml` file containing the required details, or specifying them as environment variables.\n",
     "\n",
-    "Login to https://app.simvue.io, go to the **Runs** page and click **Create new run**. Copy the 'token' from here. The run the cell below, paste the token into the box when prompted and push enter."
+    "Login to https://uk.simvue.io, go to the **Runs** page and click **Create new run**. Copy the 'token' from here. The run the cell below, paste the token into the box when prompted and push enter."
    ]
   },
   {
@@ -65,7 +65,7 @@
     "import os\n",
     "import getpass\n",
     "\n",
-    "os.environ[\"SIMVUE_URL\"] = \"https://nightly.simvue.io\"\n",
+    "os.environ[\"SIMVUE_URL\"] = \"https://uk.simvue.io\"\n",
     "os.environ[\"SIMVUE_TOKEN\"] = getpass.getpass(prompt=\"Token: \")"
    ]
   },
@@ -192,7 +192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
