Update pip installation

--- a/notebooks/non_python_example.ipynb
+++ b/notebooks/non_python_example.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "source": [
     "### Install dependencies\n",
-    "While you can use Simvue and Multiparser individually to achieve the tracking and monitoring of Non-Python files, we recommend using the `simvue-integrations` package which wraps these both together into a handy `WrappedRun` class. Install this if you have not done so already:"
+    "While you can use Simvue and Multiparser individually to achieve the tracking and monitoring of Non-Python files, we recommend using the `simvue-connector` package which wraps these both together into a handy `WrappedRun` class. Install this if you have not done so already:"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/simvue-io/integrations.git"
+    "!pip install simvue-connector"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from simvue_integrations.connectors.generic import WrappedRun\n",
+    "from simvue_connector.connector import WrappedRun\n",
     "import multiparser.parsing.tail as mp_tail_parser\n",
     "import time\n",
     "import pathlib\n",
